main/default/objects/Transactions__c/Transactions__c.object-meta.xml
<CustomObject>
    <label>Transactions</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>